# grub-uefi-http-selector

./: .gitignore  LICENSE  README.md
guhs-cli/: README.md  setup.cfg
guhs-cli/src/: guhs_cli.py  logger.py
guhs-cli/src/guhs/: guhs_cli.py  guhs_configuration.py  guhs_configurator.py  guhs_gateway.py  main.py  shell.py
guhs-cli/src/guhs/grub/: grub_service.py
guhs-cli/src/guhs/json_encoders/: configuration_request_encoder.py  configuration_response_decoder.py  get_parameter_decoder.py  get_parameter_encoder.py  set_parameter_encoder.py
guhs-cli/test/: test_grub_service.py  test_guhs_cli.py  test_guhs_configurator.py
guhs-cli/test/helpers/: default_grub_sample.py  grub_cfg_sample.py
guhs-server/: README.md  setup.cfg
guhs-server/src/: boot_script.py  server.py  storage.py
