[metadata]
name = guhs-server
version = 1
description = GRUB UEFI HTTP Server
long_description = file: README.md
long_description_content_type = text/markdown

author = Javier Moragón
author_email = jamofer@gmail.com
url = https://github.com/jamofer/grub-uefi-http-selector

classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3.7
  Topic :: System :: Boot
  Topic :: System :: Boot :: Init
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.7

package_dir =
  = src
packages = find:

[options.packages.find]
where=src

[options.extras_require]
testing =
  flake8
  pytest
  mock
